--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
+<app-header></app-header>
 <app-navbar></app-navbar>
-<app-bookslist></app-bookslist>
+
+<div class="container-fluid">
+
+  <router-outlet></router-outlet>
+
+</div>
+
 <app-footer></app-footer>
