--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,12 +14,26 @@
         <a class="nav-link" [routerLink]="['/list']" routerLinkActive="$router_link-active$">Books</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Research</a>
+        <a class="nav-link" [routerLink]="['/research']" routerLinkActive="$router_link-active$">Research</a>
       </li>
+
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+<!--    <form class="form-inline my-2 my-lg-0">-->
+<!--      <input class="form-control mr-sm-2" type="text" placeholder="Search">-->
+<!--      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
+<!--    </form>-->
+    <div>
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/login']" routerLinkActive="$router_link-active$"><i class="fa fa-user-circle-o fa-3x" aria-hidden="true" style=color:white></i> Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/cart']">
+          <i class="fa fa-shopping-bag fa-3x" aria-hidden="true"></i>
+            <span class="badge badge-success">{{cartLength}}</span></a>
+        </li>
+      </ul>
+    </div>
+
   </div>
 </nav>
